force-app/main/default/objects/Compensation_Request__c/Compensation_Request__c.object-meta.xml
<CustomObject>
    <description>Compensation Request form - International use.</description>
    <label>Compensation Request</label>
    <nameField>
        <displayFormat>CAF-{0000}</displayFormat>
        <label>Compensation Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>