force-app/main/default/objects/Compensation_Request__c/fields/Car_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Car_Eligibility__c</fullName>
    <label>Car Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease Car</fullName>
            </value>
            <value>
                <fullName>Car Allowance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>