force-app/main/default/objects/Compensation_Request__c/fields/Car_Eligibility_Category__c.field-meta.xml
<CustomField>
    <fullName>Car_Eligibility_Category__c</fullName>
    <label>Car Eligibility Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Car_Eligibility__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>