force-app/main/default/objects/Compensation_Request__c/fields/Current_Compa_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Current_Compa_Ratio__c</fullName>
    <formula>(Current_Base_Annual_Rate__c  /  Current_Part_Time__c ) /  Current_Range_Midpoint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Base Annual Rate / Part-Time %) / Range Mid-Point</inlineHelpText>
    <label>Current Compa-Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>