force-app/main/default/objects/Compensation_Request__c/fields/Current_Company_IC_Potential_calc__c.field-meta.xml
<CustomField>
    <fullName>Current_Company_IC_Potential_calc__c</fullName>
    <formula>Current_Base_Annual_Rate__c  *  Current_Company_IC_Potential_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Company IC Potential (calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>