force-app/main/default/objects/Compensation_Request__c/fields/Current_Company_IC_Potential_percent__c.field-meta.xml
<CustomField>
    <fullName>Current_Company_IC_Potential_percent__c</fullName>
    <label>Current Company IC Potential (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>