force-app/main/default/objects/Compensation_Request__c/fields/Current_IC_Pool__c.field-meta.xml
<CustomField>
    <fullName>Current_IC_Pool__c</fullName>
    <label>Current IC Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IC_Pool</valueSetName>
    </valueSet>
</CustomField>