force-app/main/default/objects/Compensation_Request__c/fields/Current_Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Code__c</fullName>
    <label>Current Job Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>