force-app/main/default/objects/Compensation_Request__c/fields/Current_Other_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Current_Other_Bonus__c</fullName>
    <formula>Current_Base_Annual_Rate__c  *  Current_Other_Bonus_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Other Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>