force-app/main/default/objects/Compensation_Request__c/fields/Current_Other_Bonus_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Other_Bonus_Target__c</fullName>
    <label>Current Other Bonus Target %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>