force-app/main/default/objects/Compensation_Request__c/fields/Current_Other_Fixed_Pay__c.field-meta.xml
<CustomField>
    <fullName>Current_Other_Fixed_Pay__c</fullName>
    <label>Current Allowances &amp; One-time Awards</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>