force-app/main/default/objects/Compensation_Request__c/fields/Current_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Part_Time__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Current Part-Time %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>