force-app/main/default/objects/Compensation_Request__c/fields/Current_Range_Min__c.field-meta.xml
<CustomField>
    <fullName>Current_Range_Min__c</fullName>
    <label>Current Range Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>