force-app/main/default/objects/Compensation_Request__c/fields/Current_Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Current_Salary_Grade__c</fullName>
    <label>Current Salary Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>