force-app/main/default/objects/Compensation_Request__c/fields/Current_Title__c.field-meta.xml
<CustomField>
    <fullName>Current_Title__c</fullName>
    <label>Current Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>