force-app/main/default/objects/Compensation_Request__c/fields/Current_Total_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_Compensation__c</fullName>
    <formula>Current_Base_Annual_Rate__c  +  Current_Other_Fixed_Pay__c  +  Current_Company_IC_Potential_calc__c  +   Current_Other_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Total Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>