force-app/main/default/objects/Compensation_Request__c/fields/Effective_Date_Car_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Car_Eligibility__c</fullName>
    <label>Effective Date Car Eligibility</label>
    <type>Date</type>
</CustomField>