force-app/main/default/objects/Compensation_Request__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>