force-app/main/default/objects/Compensation_Request__c/fields/Employee_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employee_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>