force-app/main/default/objects/Compensation_Request__c/fields/GM_VP__c.field-meta.xml
<CustomField>
    <fullName>GM_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>