force-app/main/default/objects/Compensation_Request__c/fields/HR_Manager_Director__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>