force-app/main/default/objects/Compensation_Request__c/fields/Increase_Amount_p__c.field-meta.xml
<CustomField>
    <fullName>Increase_Amount_p__c</fullName>
    <formula>IF(
   TEXT( Current_Currency__c ) =  TEXT( Proposed_Currency__c ),
   ((Proposed_Base_Annual_Rate__c  -  Current_Base_Annual_Rate__c)  /  Current_Base_Annual_Rate__c),
   NULL
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Increase Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>