force-app/main/default/objects/Compensation_Request__c/fields/Next_Level_Manager__c.field-meta.xml
<CustomField>
    <fullName>Next_Level_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>