force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Base_Annual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Base_Annual_Rate__c</fullName>
    <label>Proposed Base Annual Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>