force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Compa_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Compa_Ratio__c</fullName>
    <formula>(Proposed_Base_Annual_Rate__c  /  Proposed_Part_Time__c ) /  Proposed_Range_Midpoint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Base Annual Rate / Part-Time %) / Range Mid-Point</inlineHelpText>
    <label>Proposed Compa-Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>