force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Company_IC_Potential_calc__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Company_IC_Potential_calc__c</fullName>
    <formula>Proposed_Base_Annual_Rate__c  *  Proposed_Company_IC_Potential_percent__c</formula>
    <label>Proposed Company IC Potential (calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>