force-app/main/default/objects/Compensation_Request__c/fields/Proposed_IC_Pool__c.field-meta.xml
<CustomField>
    <fullName>Proposed_IC_Pool__c</fullName>
    <label>Proposed IC Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASEANNA (ASA)</fullName>
            </value>
            <value>
                <fullName>Asia Pacific (APC)</fullName>
            </value>
            <value>
                <fullName>Australia &amp; New Zealand (ANZ)</fullName>
            </value>
            <value>
                <fullName>Benelux (BLX)</fullName>
            </value>
            <value>
                <fullName>Greater China (CHN)</fullName>
            </value>
            <value>
                <fullName>Corporate (CRP)</fullName>
            </value>
            <value>
                <fullName>DACH (DCH)</fullName>
            </value>
            <value>
                <fullName>EMEA (EMA)</fullName>
            </value>
            <value>
                <fullName>EMEA Emerging Markets (EEM)</fullName>
            </value>
            <value>
                <fullName>France (FRA)</fullName>
            </value>
            <value>
                <fullName>FLC Global (FLC)</fullName>
            </value>
            <value>
                <fullName>Iberia (IBR)</fullName>
            </value>
            <value>
                <fullName>Indian Subcontinent (INS)</fullName>
            </value>
            <value>
                <fullName>International (ITL)</fullName>
            </value>
            <value>
                <fullName>Italy (ITA)</fullName>
            </value>
            <value>
                <fullName>Japan (JPN)</fullName>
            </value>
            <value>
                <fullName>Latin America (LAM)</fullName>
            </value>
            <value>
                <fullName>Levant Africa Turkey (LAT)</fullName>
            </value>
            <value>
                <fullName>Nordics (NOR)</fullName>
            </value>
            <value>
                <fullName>PSS Global (PSS)</fullName>
            </value>
            <value>
                <fullName>PSS Care Comm (PSC)</fullName>
            </value>
            <value>
                <fullName>Respiratory Health (RH)</fullName>
            </value>
            <value>
                <fullName>GSS Global (GSS)</fullName>
            </value>
            <value>
                <fullName>United Kingdom &amp; Ireland (UKI)</fullName>
            </value>
            <value>
                <fullName>Welch Allyn Global (WA)</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <isActive>false</isActive>
                <label>APAC</label>
            </value>
            <value>
                <fullName>Allen Medical (Total)</fullName>
                <isActive>false</isActive>
                <label>Allen Medical (Total)</label>
            </value>
            <value>
                <fullName>Aspen Surgical (Total)</fullName>
                <isActive>false</isActive>
                <label>Aspen Surgical (Total)</label>
            </value>
            <value>
                <fullName>Australia</fullName>
                <isActive>false</isActive>
                <label>Australia</label>
            </value>
            <value>
                <fullName>Benelux</fullName>
                <isActive>false</isActive>
                <label>Benelux</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>