force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Job_Code__c</fullName>
    <label>Proposed Job Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>