force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Other_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Other_Bonus__c</fullName>
    <formula>Proposed_Base_Annual_Rate__c  *  Proposed_Other_Bonus_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Other Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>