force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Other_Bonus_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Other_Bonus_Plan_Name__c</fullName>
    <label>Proposed Other Bonus Plan Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>