force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Range_Max__c</fullName>
    <label>Proposed Range Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>