force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Salary_Grade__c</fullName>
    <label>Proposed Salary Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>