force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Title__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Title__c</fullName>
    <label>Proposed Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>