force-app/main/default/objects/Compensation_Request__c/fields/Proposed_Total_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Total_Compensation__c</fullName>
    <formula>Proposed_Base_Annual_Rate__c  +  Proposed_Other_Fixed_Pay__c  +  Proposed_Company_IC_Potential_calc__c  +   Proposed_Other_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Total Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>