force-app/main/default/objects/Compensation_Request__c/fields/SLT_ELT__c.field-meta.xml
<CustomField>
    <fullName>SLT_ELT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLT/ELT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>