force-app/main/default/objects/Compensation_Request__c/fields/Sr_Comp_Ben_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sr_Comp_Ben_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 5</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests8</relationshipName>
    <type>Lookup</type>
</CustomField>