force-app/main/default/objects/Compensation_Request__c/fields/SVP_HR__c.field-meta.xml
<CustomField>
    <fullName>SVP_HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHRO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests7</relationshipName>
    <type>Lookup</type>
</CustomField>