force-app/main/default/objects/Compensation_Request__c/fields/Total_Compensation_Increase_Diff__c.field-meta.xml
<CustomField>
    <fullName>Total_Compensation_Increase_Diff__c</fullName>
    <formula>IF(TEXT(Current_Currency__c) = TEXT(Proposed_Currency__c),
(Proposed_Total_Compensation__c - Current_Total_Compensation__c),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Compensation Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>