force-app/main/default/objects/Compensation_Request__c/fields/Total_Rewards_Exec_Director__c.field-meta.xml
<CustomField>
    <fullName>Total_Rewards_Exec_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP Total Rewards</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests9</relationshipName>
    <type>Lookup</type>
</CustomField>