force-app/main/default/objects/Compensation_Request__c/fields/Transaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reason__c</fullName>
    <label>Transaction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allowances (TRP)</fullName>
            </value>
            <value>
                <fullName>In-Grade Adjustment</fullName>
            </value>
            <value>
                <fullName>One-time Awards</fullName>
            </value>
            <value>
                <fullName>Promotional Increases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>