force-app/main/default/objects/Compensation_Request__c/fields/Variable_Compensation_Increase__c.field-meta.xml
<CustomField>
    <fullName>Variable_Compensation_Increase__c</fullName>
    <formula>IF(TEXT(Current_Currency__c) = TEXT(Proposed_Currency__c),
((Proposed_Company_IC_Potential_calc__c +  Proposed_Other_Bonus__c ) - (Current_Company_IC_Potential_calc__c +  Current_Other_Bonus__c )),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable Compensation Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>