force-app/main/default/objects/Compensation_Request__c/fields/VP_HR_International__c.field-meta.xml
<CustomField>
    <fullName>VP_HR_International__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 6</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compensation_Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>